--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": ""
+    "dev": "nodemon --exec babel-node server",
+    "migrate": "npx prisma migrate dev",
+    "studio": "npx prisma studio"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,21 @@
   "bugs": {
     "url": "https://github.com/treetea-bro/instaclone-backend/issues"
   },
-  "homepage": "https://github.com/treetea-bro/instaclone-backend#readme"
+  "homepage": "https://github.com/treetea-bro/instaclone-backend#readme",
+  "dependencies": {
+    "@graphql-tools/load-files": "^6.6.1",
+    "@graphql-tools/merge": "^8.3.11",
+    "@graphql-tools/schema": "^9.0.9",
+    "@prisma/client": "^4.6.1",
+    "apollo-server": "^2.26.1",
+    "dotenv": "^16.0.3",
+    "graphql": "^15.8.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/node": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.6.1"
+  }
 }
