--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@graphql-tools/schema": "^9.0.9",
     "@prisma/client": "^4.6.1",
     "apollo-server": "^2.26.1",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
-    "graphql": "^15.8.0"
+    "graphql": "^15.8.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
