--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/server --ext ts,js",
+    "dev": "nodemon --exec ts-node src/server --ext ts,js --delay 2s",
     "migrate": "npx prisma migrate dev",
     "studio": "npx prisma studio"
   },
@@ -23,18 +23,24 @@
     "@graphql-tools/merge": "^8.3.11",
     "@graphql-tools/schema": "^9.0.9",
     "@prisma/client": "^4.6.1",
-    "apollo-server": "^2.26.1",
+    "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "graphql": "^15.8.0",
-    "jsonwebtoken": "^8.5.1"
+    "graphql-upload": "^13.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/node": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.14",
+    "@types/graphql-upload": "^8.0.12",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.20",
     "prisma": "^4.6.1",
     "ts-node": "^10.9.1",
